--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
+    <link rel="icon" href="img/flowers.png" type="image/x-icon">
     <title>Flower</title>
 </head>
 <body class="container">
@@ -144,32 +145,31 @@
 
             <div class="grow-ans" style="--d:2.8s">
                 <div class="flower_g-front">
-                    <div class="flower_g-front_line">
-                        <div class="flower_g-front_leaf-wrapper flower_g-front_leaf-wrapper--1">
-                            <div class="flower_g-front_leaf"></div>
-                        </div>
-                        <div class="flower_g-front_leaf-wrapper flower_g-front_leaf-wrapper--2">
-                            <div class="flower_g-front_leaf"></div>
-                        </div>
-                        <div class="flower_g-front_leaf-wrapper flower_g-front_leaf-wrapper--3">
-                            <div class="flower_g-front_leaf"></div>
-                        </div>
-                        <div class="flower_g-front_leaf-wrapper flower_g-front_leaf-wrapper--4">
-                            <div class="flower_g-front_leaf"></div>
-                        </div>
-                        <div class="flower_g-front_leaf-wrapper flower_g-front_leaf-wrapper--5">
-                            <div class="flower_g-front_leaf"></div>
-                        </div>
-                        <div class="flower_g-front_leaf-wrapper flower_g-front_leaf-wrapper--6">
-                            <div class="flower_g-front_leaf"></div>
-                        </div>
-                        <div class="flower_g-front_leaf-wrapper flower_g-front_leaf-wrapper--7">
-                            <div class="flower_g-front_leaf"></div>
-                        </div>
-                        <div class="flower_g-front_leaf-wrapper flower_g-front_leaf-wrapper--8">
-                            <div class="flower_g-front_leaf"></div>
-                        </div>
+                    <div class="flower_g-front_leaf-wrapper flower_g-front_leaf-wrapper--1"></div>
+                        <div class="flower_g-front_leaf"></div>
                     </div>
+                    <div class="flower_g-front_leaf-wrapper flower_g-front_leaf-wrapper--2"></div>
+                        <div class="flower_g-front_leaf"></div>
+                    </div>
+                    <div class="flower_g-front_leaf-wrapper flower_g-front_leaf-wrapper--3"></div>
+                        <div class="flower_g-front_leaf"></div>
+                    </div>
+                    <div class="flower_g-front_leaf-wrapper flower_g-front_leaf-wrapper--4"></div>
+                        <div class="flower_g-front_leaf"></div>
+                    </div>
+                    <div class="flower_g-front_leaf-wrapper flower_g-front_leaf-wrapper--5"></div>
+                        <div class="flower_g-front_leaf"></div>
+                    </div>
+                    <div class="flower_g-front_leaf-wrapper flower_g-front_leaf-wrapper--6"></div>
+                        <div class="flower_g-front_leaf"></div>
+                    </div>
+                    <div class="flower_g-front_leaf-wrapper flower_g-front_leaf-wrapper--7"></div>
+                        <div class="flower_g-front_leaf"></div>
+                    </div>
+                    <div class="flower_g-front_leaf-wrapper flower_g-front_leaf-wrapper--8"></div>
+                        <div class="flower_g-front_leaf"></div>
+                    </div>
+                    <div class="flower_g-front_line"></div>
                 </div>
             </div>
 
@@ -184,6 +184,21 @@
                     <div class="flower_g-fr_leaf flower_g-fr_leaf--6"></div>
                     <div class="flower_g-fr_leaf flower_g-fr_leaf--7"></div>
                     <div class="flower_g-fr_leaf flower_g-fr_leaf--8"></div>
+                </div>
+            </div>
+
+            <div class="long-g long-g--0">
+                <div class="grow-ans" style="--d:3s">
+                    <div class="leaf leaf--0"></div>
+                </div>
+                <div class="grow-ans" style="--d:2.2s">
+                    <div class="leaf leaf--1"></div>
+                </div>
+                <div class="grow-ans" style="--d:3.4s">
+                    <div class="leaf leaf--2"></div>
+                </div>
+                <div class="grow-ans" style="--d:3.6s">
+                    <div class="leaf leaf--3"></div>
                 </div>
             </div>
 
